add unit testings, check all the api and model inside the common module, updated design doc for it